Completed linking pages to <a>tags, all links working. website is now mobile-first lay out, but not yet finished with styling buttons and some hover effects

--- a/HTML-CATEGORIES/utensils.html
+++ b/HTML-CATEGORIES/utensils.html
@@ -58,251 +58,249 @@
 
 <div class="banners">
     <img src="../images/BANNERS/Banner-Knife.jpg" alt="Knife Banner">
-    <p class="bannerMessageMain">Searing & Simmering</p>
-    <p class="bannerMessageSub">Elevate your stovetop with minimalist design and industrial-strength performance.</p>
+    <p class="bannerMessageMain">Master the Mix</p>
+    <p class="bannerMessageSub">Achieve the perfect consistency with weighted tools that do the hard work for you.</p>
 </div>
 
-<h2 class="h2Main">Frying Pan</h2>
+<h2 class="h2Main">Utensil Set</h2>
 <div class="mainProductsGroup">
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-1-Fry Pan-Classic Steel Wok with Bamboo Grip.png" alt="Classic Steel Wok with Bamboo Grip">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-1-3pcs Starter Kitchen Tool Set.png" alt="3pcs Starter Kitchen Tool Set">
         </figure>
-        <figcaption class="productCaption">Classic Steel Wok with Bamboo Grip</figcaption>
-        <p class="price">₱1,299.00</p>
+        <figcaption class="productCaption">3pcs Starter Kitchen Tool Set</figcaption>
+        <p class="price">₱435.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-2-Fry Pan-Classic Carbon Steel Wok.png" alt="Classic Carbon Steel Wok with Wooden Handle">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-2-5pcs Kitchen Tool Set.png" alt="5pcs Stainless Steel Kitchen Tool Set">
         </figure>
-        <figcaption class="productCaption">Classic Carbon Steel Wok with Wooden Handle</figcaption>
-        <p class="price">₱775.00</p>
+        <figcaption class="productCaption">5pcs Stainless Steel Kitchen Tool Set</figcaption>
+        <p class="price">₱699.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-3-Fry Pan-Shiny Frying Pan.png" alt="Modern Style Shiny Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-3-Black Kitchen Utensils.png" alt="Set of 4 Black Kitchen Utensils">
         </figure>
-        <figcaption class="productCaption">Modern Style Shiny Frying Pan</figcaption>
-        <p class="price">₱468.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-4-Fry Pan-Cast Iron Skillet.png" alt="Classic Style Cast Iron Skillet">
-        </figure>
-        <figcaption class="productCaption">Classic Style Cast Iron Skillet</figcaption>
-        <p class="price">₱495.00</p>
+        <figcaption class="productCaption">Set of 4 Black Kitchen Utensils</figcaption>
+        <p class="price">₱498.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-5-Fry Pan-11inches Fry Pan.png" alt="11inches Elegant Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-4-3pcs Grilling Set.png" alt="3pcs  Stainless Steel Grilling Set">
         </figure>
-        <figcaption class="productCaption">11inches Elegant Frying Pan</figcaption>
-        <p class="price">₱480.00</p>
+        <figcaption class="productCaption">3pcs  Stainless Steel Grilling Set</figcaption>
+        <p class="price">₱410.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-6-Fry Pan-11inches Carbon Steel Frying Pan.png" alt="11inches Carbon Steel Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-5pcs NonStick Utensil Set.png" alt="Set of 5 NonStick Utensil Set">
         </figure>
-        <figcaption class="productCaption">11inches Carbon Steel Frying Pan</figcaption>
-        <p class="price">₱425.00</p>
+        <figcaption class="productCaption">Set of 5 NonStick Utensil Set</figcaption>
+        <p class="price">₱615.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-7-Fry Pan-8inches Black Frying Pan with Wooden Handle.png" alt="8inches Black Frying Pan with Wooden Handle">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-6-Essential Kitchen Tool Set.png" alt="Classic Essential Kitchen Tool Set of 4">
         </figure>
-        <figcaption class="productCaption">8inches Black Frying Pan with Wooden Handle</figcaption>
-        <p class="price">₱405.00</p>
+        <figcaption class="productCaption">Classic Essential Kitchen Tool Set of 4</figcaption>
+        <p class="price">₱679.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-8-Fry Pan-8inches Cast Iron Skillet.png" alt="8inches Round Cast Iron Skillet">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-7-8pcs Stainless Steel Utensil Set.png" alt="8pcs Stainless Steel Utensil Set">
         </figure>
-        <figcaption class="productCaption">8inches Round Cast Iron Skillet</figcaption>
-        <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-</div>
-
-<div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-frying-P2-viewmore.html">View More</a></button>
-</div>
-
-
-<h2 class="h2Main">Grill Pan</h2>
-<div class="mainProductsGroup">
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-1-Orange Grill Pan.png" alt="Orange Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Orange Grill Pan</figcaption>
-        <p class="price">₱597.00</p>
+        <figcaption class="productCaption">8pcs Stainless Steel Utensil Set</figcaption>
+        <p class="price">₱790.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-2-Blue Enamel Grill Pan.png" alt="Blue Enamel Grill Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-8-Gray Utensil Crock with Silicone Tools.png" alt="Gray Utensil Crock with Silicone Tools">
         </figure>
-        <figcaption class="productCaption">Blue Enamel Grill Pan</figcaption>
-        <p class="price">₱599.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-3-Non Stick Grill Pan.png" alt="Non Stick Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Non Stick Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-4-Deep Square Grill Pan.png" alt="Deep Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Deep Square Grill Pan</figcaption>
-        <p class="price">₱559.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-5-Mini Panini Pan with Press.png" alt="Mini Panini Pan with Press">
-        </figure>
-        <figcaption class="productCaption">Mini Panini Pan with Press</figcaption>
-        <p class="price">₱630.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-6-11inches Square Griddle Pan.png" alt="11inches Square Griddle Pan">
-        </figure>
-        <figcaption class="productCaption">11in. Square Griddle Pan</figcaption>
-        <p class="price">₱489.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-7-11inches BBQ Pattern Square Grill Pan.png" alt="11inches BBQ Pattern Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">11in. BBQ Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-8-12inches Square Grill Pan.png" alt="12inches Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">12inches Square Grill Pan</figcaption>
+        <figcaption class="productCaption">Gray Utensil Crock with Silicone Tools</figcaption>
         <p class="price">₱499.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 </div>
 
 <div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-grill-P2-viewmore.html">View More</a></button>
+    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/utensils-set-P2-viewmore.html">View More</a></button>
 </div>
 
-<h2 class="h2Main">Pots</h2>
+
+<h2 class="h2Main">Spoon, Fork and Ladle</h2>
 <div class="mainProductsGroup">
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-1-6.25Qt. Stainless Steel Deep Round Stockpot with Lid.png" alt="6.25Qt. Stainless Steel Deep Round Stockpot with Lid">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-1-Elegant Stainless Steel Flatware Set.png" alt="Elegant Stainless Steel Flatware Set">
         </figure>
-        <figcaption class="productCaption">6.25Qt. Stainless Steel Round Stockpot with Lid</figcaption>
-        <p class="price">₱890.00</p>
+        <figcaption class="productCaption">Elegant Stainless Steel Flatware Set</figcaption>
+        <p class="price">₱365.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-2-12cup Modern Stainless Steel Saucepan.png" alt="12cup Modern Stainless Steel Saucepan">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-2-Set of 5 Stainless Steel Flatware Set.png" alt="Set of 5 Stainless Steel Flatware Set">
         </figure>
-        <figcaption class="productCaption">12cup Modern Stainless Steel Saucepan</figcaption>
-        <p class="price">₱785.00</p>
+        <figcaption class="productCaption">Set of 5 Stainless Steel Flatware Set</figcaption>
+        <p class="price">₱415.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-3-0.7Qt. Mini Stockpot with Glass Lid.png" alt="0.7Qt. Mini Stockpot with Glass Lid">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-3-Sleek Flatware Set.png" alt="Classic Sleek Flatware Set">
         </figure>
-        <figcaption class="productCaption">0.7Qt. Mini Stockpot with Glass Lid</figcaption>
-        <p class="price">₱930.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-4-8Qt. Stainless Steel 3-Ply Base Stockpt with Lid.png" alt="8Qt. Stainless Steel 3-Ply Base Stockpt with Lid">
-        </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel 3-Ply Base Stockpt with Lid</figcaption>
-        <p class="price">₱799.00</p>
+        <figcaption class="productCaption">Classic Sleek Flatware Set</figcaption>
+        <p class="price">₱320.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-5-8.3Qt. Thermalloy Stainless Steel Deep Stockpot.png" alt="8.3Qt. Thermalloy Stainless Steel Deep Stockpot">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-4-5pcs Flatware Set.png" alt="5pcs Modern Flatware Set">
         </figure>
-        <figcaption class="productCaption">8.3Qt. Stainless Steel Deep Stockpot</figcaption>
-        <p class="price">₱710.00</p>
+        <figcaption class="productCaption">5pcs Modern Flatware Set</figcaption>
+        <p class="price">₱309.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-6-8Qt. Stainless Steel Stockpot.png" alt="8Qt. Stainless Steel Stockpot">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-5-9pcs Elegant Flatware Set.png" alt="9pcs Stainless Steel Elegant Flatware Set">
         </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel Stockpot</figcaption>
-        <p class="price">₱649.00</p>
+        <figcaption class="productCaption">9pcs  Stainless Steel Elegant Flatware Set</figcaption>
+        <p class="price">₱575.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-7-7.5Qt. Deep Round Stockpot & Colander Insert.png" alt="7.5Qt. Deep Round Stockpot & Colander Insert">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-6-12pcs Polished Flatware Set.png" alt="12pcs Polished Flatware Set">
         </figure>
-        <figcaption class="productCaption">7.5Qt. Deep Round Stockpot & Colander Insert</figcaption>
-        <p class="price">₱1,245.00</p>
+        <figcaption class="productCaption">12pcs Polished Flatware Set</figcaption>
+        <p class="price">₱795.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-8-7Qt Stainless Steel Stockpot with Lid.png" alt="7Qt Stainless Steel Stockpot with Lid">
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-7-Elegant Copper Flatware Set.png" alt="Elegant Copper Flatware Set">
         </figure>
-        <figcaption class="productCaption">7Qt Stainless Steel Stockpot with Lid</figcaption>
-        <p class="price">₱846.00</p>
+        <figcaption class="productCaption">Elegant Copper Flatware Set</figcaption>
+        <p class="price">₱499.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPOON&FORK&LADLE/UTENSILS-SFL-8-Set of 12 Wooden Handled Flatware Set.png" alt="Set of 12 Wooden Handled Flatware Set">
+        </figure>
+        <figcaption class="productCaption">Set of 12 Wooden Handled Flatware Set</figcaption>
+        <p class="price">₱1,105.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 </div>
 
 <div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html">View More</a></button>
+    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/utensils-SPL-P2-viewmore.html">View More</a></button>
 </div>
 
+
+
+<h2 class="h2Main">Spatula and Turner</h2>
+<div class="mainProductsGroup">
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-1-Stainless Steel Fish Turner.png" alt="Stainless Steel Fish Turner">
+        </figure>
+        <figcaption class="productCaption">Stainless Steel Fish Turner</figcaption>
+        <p class="price">₱278.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-2-Black Slotted Spatula.png" alt="Black Slotted Spatula">
+        </figure>
+        <figcaption class="productCaption">Black Slotted Spatula</figcaption>
+        <p class="price">₱250.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-3-Nylon Square Turner.png" alt="Nylon Square Turner">
+        </figure>
+        <figcaption class="productCaption">Nylon Square Turner</figcaption>
+        <p class="price">₱215.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-4-Large Nylon Flexible Turner.png" alt="Large Nylon Flexible Turner">
+        </figure>
+        <figcaption class="productCaption">Nylon Flexible Turner</figcaption>
+        <p class="price">₱220.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-5-Cut and Serve Turner.png" alt="Cut and Serve Turner">
+        </figure>
+        <figcaption class="productCaption">Cut and Serve Turner</figcaption>
+        <p class="price">₱219.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-6-Polished Stainless Steel Spatula.png" alt="Polished Stainless Steel Spatula">
+        </figure>
+        <figcaption class="productCaption">Stainless Steel Spatula</figcaption>
+        <p class="price">₱299.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-7-Cookie Spatula.png" alt="Cookie Spatula">
+        </figure>
+        <figcaption class="productCaption">Cookie Spatula</figcaption>
+        <p class="price">₱204.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/SPATULA&TURNER/Utensils-Spatula&Turner-8-13inches Flexible Stainless Steel Turner.png" alt="13inches Flexible Stainless Steel Turner">
+        </figure>
+        <figcaption class="productCaption">13in. Flexible Turner</figcaption>
+        <p class="price">₱249.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+</div>
+
+<div class="viewMore">
+    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/utensils-spatula&turner-P2-viewmore.html">View More</a></button>
+</div>
 
 
 
