--- a/HTML-MINI PARTS/footer.html
+++ b/HTML-MINI PARTS/footer.html
@@ -14,7 +14,7 @@
 </section>
 
 
-<section class="section4Bottom">
+<section class="footerGroup">
 
     <div class="column1">
         <div class="bottomLogo">
