--- a/HTML-VIEW MORE pages/utensils-set-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/utensils-set-P2-viewmore.html
@@ -11,19 +11,18 @@
     <link rel="stylesheet" href="../CSS FOLDER/mainPage.css">
     <link rel="stylesheet" href="../CSS FOLDER/footermobile.css">
 
-    <link rel="icon" type="image/png" href="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png">
+    <link rel="icon" type="image/png" href="images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    
 </head>
 
 <body>
     <header class="headerGroup">
         <div class="pageLogoBox">
-            <a href="/main.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
+            <a href="/main.html"><img class="pageLogo" src="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
         </div>
         <div class="inputBarHeader">
             <input type="text" placeholder="Search...">
@@ -44,279 +43,164 @@
     <hr>
 
 <nav class="categories">
-    <a href="accessories.html">ACCESSORIES</a>
-    <a href="bakingtools.html">BAKING TOOLS</a>
-    <a href="storage.html">STORAGE</a>
-    <a href="glasswares.html">GLASSWARES</a>
-    <a href="kitchenappliances.html">KITCHEN APPLIANCES</a>
-    <a href="knives.html">KNIVES</a>
-    <a href="cookwares.html">COOKWARES</a>
-    <a href="utensils.html">UTENSILS</a>
+    <a href="/HTML-CATEGORIES/accessories.html">ACCESSORIES</a>
+    <a href="/HTML-CATEGORIES/bakingtools.html">BAKING TOOLS</a>
+    <a href="/HTML-CATEGORIES/storage.html">STORAGE</a>
+    <a href="/HTML-CATEGORIES/glasswares.html">GLASSWARES</a>
+    <a href="/HTML-CATEGORIES/kitchenappliances.html">KITCHEN APPLIANCES</a>
+    <a href="/HTML-CATEGORIES/knives.html">KNIVES</a>
+    <a href="/HTML-CATEGORIES/cookwares.html">COOKWARES</a>
+    <a href="/HTML-CATEGORIES/utensils.html">UTENSILS</a>
 </nav>
 <hr>
 
-
-<div class="banners">
-    <img src="../images/BANNERS/Banner-Knife.jpg" alt="Knife Banner">
-    <p class="bannerMessageMain">Searing & Simmering</p>
-    <p class="bannerMessageSub">Elevate your stovetop with minimalist design and industrial-strength performance.</p>
+<div>
+    <ul>
+        <li><a href="/main.html">HOME</a></li>
+        <li><a href="/HTML-CATEGORIES/utensils.html">UTENSILS</a></li>
+        <li><a href="utensils-set-P2-viewmore.html">UTENSIL SET</a></li>
+    </ul>
 </div>
 
-<h2 class="h2Main">Frying Pan</h2>
+<h2 class="h2Main">Utensil Set</h2>
 <div class="mainProductsGroup">
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-1-Fry Pan-Classic Steel Wok with Bamboo Grip.png" alt="Classic Steel Wok with Bamboo Grip">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-1-Blue Utensil Set with Crock.png" alt="Blue Utensil Set with Crock">
         </figure>
-        <figcaption class="productCaption">Classic Steel Wok with Bamboo Grip</figcaption>
-        <p class="price">₱1,299.00</p>
+        <figcaption class="productCaption">Blue-colored Utensil Set with Crock</figcaption>
+        <p class="price">₱439.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-2-Fry Pan-Classic Carbon Steel Wok.png" alt="Classic Carbon Steel Wok with Wooden Handle">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-2-Red Utensil Set with Crock.png" alt="Red Utensil Set with Crock">
         </figure>
-        <figcaption class="productCaption">Classic Carbon Steel Wok with Wooden Handle</figcaption>
-        <p class="price">₱775.00</p>
+        <figcaption class="productCaption">Red-colored Utensil Set with Crock</figcaption>
+        <p class="price">₱439.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-3-Fry Pan-Shiny Frying Pan.png" alt="Modern Style Shiny Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-3-White Utensil Set with Crock.png" alt="White Utensil Set with Crock">
         </figure>
-        <figcaption class="productCaption">Modern Style Shiny Frying Pan</figcaption>
-        <p class="price">₱468.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-4-Fry Pan-Cast Iron Skillet.png" alt="Classic Style Cast Iron Skillet">
-        </figure>
-        <figcaption class="productCaption">Classic Style Cast Iron Skillet</figcaption>
-        <p class="price">₱495.00</p>
+        <figcaption class="productCaption">White-colored Utensil Set with Crock</figcaption>
+        <p class="price">₱429.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-5-Fry Pan-11inches Fry Pan.png" alt="11inches Elegant Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-4-Peach Utensil Set with Crock.png" alt="Peach Utensil Set with Crock">
         </figure>
-        <figcaption class="productCaption">11inches Elegant Frying Pan</figcaption>
-        <p class="price">₱480.00</p>
+        <figcaption class="productCaption">Peach-colored Utensil Set with Crock</figcaption>
+        <p class="price">₱439.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-6-Fry Pan-11inches Carbon Steel Frying Pan.png" alt="11inches Carbon Steel Frying Pan">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-5-7pcs Colorful Kitchen Utensil Set.png" alt="7pcs Colorful Kitchen Utensil Set">
         </figure>
-        <figcaption class="productCaption">11inches Carbon Steel Frying Pan</figcaption>
-        <p class="price">₱425.00</p>
+        <figcaption class="productCaption">7pcs Colorful Kitchen Utensil Set</figcaption>
+        <p class="price">₱819.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-7-Fry Pan-8inches Black Frying Pan with Wooden Handle.png" alt="8inches Black Frying Pan with Wooden Handle">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-6-Colorful Kitchen Utensils.png" alt="Colorful Kitchen Utensils">
         </figure>
-        <figcaption class="productCaption">8inches Black Frying Pan with Wooden Handle</figcaption>
+        <figcaption class="productCaption">5-piece Colorful Kitchen Utensils</figcaption>
+        <p class="price">₱529.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-7-3pcs Colorful Silicone Spatulas.png" alt="3pcs Colorful Silicone Spatulas">
+        </figure>
+        <figcaption class="productCaption">3-piece Colorful Silicone Spatulas</figcaption>
         <p class="price">₱405.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-8-Fry Pan-8inches Cast Iron Skillet.png" alt="8inches Round Cast Iron Skillet">
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-8-Colorful Kitchen Utensil Set.png" alt="Colorful Kitchen Utensil Set">
         </figure>
-        <figcaption class="productCaption">8inches Round Cast Iron Skillet</figcaption>
-        <p class="price">₱439.00</p>
+        <figcaption class="productCaption">6-piece Colorful Kitchen Utensil Set</figcaption>
+        <p class="price">₱690.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-9-Black Modern Kitchen Utensil Set with Holder.png" alt="Black Modern Kitchen Utensil Set with Holder">
+        </figure>
+        <figcaption class="productCaption">Black Modern Kitchen Utensil Set with Holder</figcaption>
+        <p class="price">₱565.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-10-17pcs Kitchen Utensils Set.png" alt="17pcs Black Kitchen Utensils Set">
+        </figure>
+        <figcaption class="productCaption">17-piece Black Kitchen Utensils Set</figcaption>
+        <p class="price">₱1,965.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-11-9pcs Kitchen Tools Set.png" alt="9pcs Kitchen Tools Set with Wooden Handle">
+        </figure>
+        <figcaption class="productCaption">9-piece Kitchen Tool Set with Wooden Handle</figcaption>
+        <p class="price">₱1,549.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/UTENSILS/UTENSIL-SET/Utensils-Utensil Set-MORE-12-5pcs Stainless Steel Utensil Set.png" alt="5pcs Stainless Steel Utensil Set">
+        </figure>
+        <figcaption class="productCaption">5-piece Stainless Steel Utensil Set</figcaption>
+        <p class="price">₱979.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 </div>
 
 <div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-frying-P2-viewmore.html">View More</a></button>
+    <button id="viewMoreButton"><a href="/HTML-CATEGORIES/utensils.html">◀</a></button>
+    <button id="viewMoreButton"><a href="/HTML-CATEGORIES/utensils.html">1</a></button>
+    <button id="viewMoreButton"><a href="utensils-set-P2-viewmore.html">2</a></button>
 </div>
 
-
-<h2 class="h2Main">Grill Pan</h2>
-<div class="mainProductsGroup">
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-1-Orange Grill Pan.png" alt="Orange Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Orange Grill Pan</figcaption>
-        <p class="price">₱597.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-2-Blue Enamel Grill Pan.png" alt="Blue Enamel Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Blue Enamel Grill Pan</figcaption>
-        <p class="price">₱599.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-3-Non Stick Grill Pan.png" alt="Non Stick Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Non Stick Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-4-Deep Square Grill Pan.png" alt="Deep Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Deep Square Grill Pan</figcaption>
-        <p class="price">₱559.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-5-Mini Panini Pan with Press.png" alt="Mini Panini Pan with Press">
-        </figure>
-        <figcaption class="productCaption">Mini Panini Pan with Press</figcaption>
-        <p class="price">₱630.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-6-11inches Square Griddle Pan.png" alt="11inches Square Griddle Pan">
-        </figure>
-        <figcaption class="productCaption">11in. Square Griddle Pan</figcaption>
-        <p class="price">₱489.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-7-11inches BBQ Pattern Square Grill Pan.png" alt="11inches BBQ Pattern Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">11in. BBQ Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-8-12inches Square Grill Pan.png" alt="12inches Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">12inches Square Grill Pan</figcaption>
-        <p class="price">₱499.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
+<div>
+    <ul>
+        <li><a href="/main.html">Featured Products</a></li>
+        <li><a href="/main.html">Best Sellers</a></li>
+        <li><a href="/main.html">Limited Offers</a></li>
+        <li><a href="/main.html">Bundle Deals</a></li>
+    </ul>
 </div>
-
-<div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-grill-P2-viewmore.html">View More</a></button>
-</div>
-
-<h2 class="h2Main">Pots</h2>
-<div class="mainProductsGroup">
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-1-6.25Qt. Stainless Steel Deep Round Stockpot with Lid.png" alt="6.25Qt. Stainless Steel Deep Round Stockpot with Lid">
-        </figure>
-        <figcaption class="productCaption">6.25Qt. Stainless Steel Round Stockpot with Lid</figcaption>
-        <p class="price">₱890.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-2-12cup Modern Stainless Steel Saucepan.png" alt="12cup Modern Stainless Steel Saucepan">
-        </figure>
-        <figcaption class="productCaption">12cup Modern Stainless Steel Saucepan</figcaption>
-        <p class="price">₱785.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-3-0.7Qt. Mini Stockpot with Glass Lid.png" alt="0.7Qt. Mini Stockpot with Glass Lid">
-        </figure>
-        <figcaption class="productCaption">0.7Qt. Mini Stockpot with Glass Lid</figcaption>
-        <p class="price">₱930.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-4-8Qt. Stainless Steel 3-Ply Base Stockpt with Lid.png" alt="8Qt. Stainless Steel 3-Ply Base Stockpt with Lid">
-        </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel 3-Ply Base Stockpt with Lid</figcaption>
-        <p class="price">₱799.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-5-8.3Qt. Thermalloy Stainless Steel Deep Stockpot.png" alt="8.3Qt. Thermalloy Stainless Steel Deep Stockpot">
-        </figure>
-        <figcaption class="productCaption">8.3Qt. Stainless Steel Deep Stockpot</figcaption>
-        <p class="price">₱710.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-6-8Qt. Stainless Steel Stockpot.png" alt="8Qt. Stainless Steel Stockpot">
-        </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel Stockpot</figcaption>
-        <p class="price">₱649.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-7-7.5Qt. Deep Round Stockpot & Colander Insert.png" alt="7.5Qt. Deep Round Stockpot & Colander Insert">
-        </figure>
-        <figcaption class="productCaption">7.5Qt. Deep Round Stockpot & Colander Insert</figcaption>
-        <p class="price">₱1,245.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-8-7Qt Stainless Steel Stockpot with Lid.png" alt="7Qt Stainless Steel Stockpot with Lid">
-        </figure>
-        <figcaption class="productCaption">7Qt Stainless Steel Stockpot with Lid</figcaption>
-        <p class="price">₱846.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-</div>
-
-<div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html">View More</a></button>
-</div>
-
-
 
 
 <h2 class="h2Main">Shop by Category</h2>
 <div class="bottomCategoryBlock">
-    <a href="accessories.html">ACCESSORIES</a>
-    <a href="bakingtools.html">BAKING TOOLS</a>
-    <a href="cookwares.html">COOKWARES</a>
-    <a href="glasswares.html">GLASSWARES</a>
-    <a href="kitchenappliances.html">KITCHEN APPLIANCES</a>
-    <a href="knives.html">KNIVES</a>
-    <a href="storage.html">STORAGE</a>
-    <a href="utensils.html">UTENSILS</a>
+    <a href="/HTML-CATEGORIES/accessories.html">ACCESSORIES</a>
+    <a href="/HTML-CATEGORIES/bakingtools.html">BAKING TOOLS</a>
+    <a href="/HTML-CATEGORIES/cookwares.html">COOKWARES</a>
+    <a href="/HTML-CATEGORIES/glasswares.html">GLASSWARES</a>
+    <a href="/HTML-CATEGORIES/kitchenappliances.html">KITCHEN APPLIANCES</a>
+    <a href="/HTML-CATEGORIES/knives.html">KNIVES</a>
+    <a href="/HTML-CATEGORIES/storage.html">STORAGE</a>
+    <a href="/HTML-CATEGORIES/utensils.html">UTENSILS</a>
 </div>
+
 
 
 
