--- a/HTML-VIEW MORE pages/glasswares-Mugs-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/glasswares-Mugs-P2-viewmore.html
@@ -11,19 +11,18 @@
     <link rel="stylesheet" href="../CSS FOLDER/mainPage.css">
     <link rel="stylesheet" href="../CSS FOLDER/footermobile.css">
 
-    <link rel="icon" type="image/png" href="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png">
+    <link rel="icon" type="image/png" href="images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    
 </head>
 
 <body>
     <header class="headerGroup">
         <div class="pageLogoBox">
-            <a href="/main.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
+            <a href="/main.html"><img class="pageLogo" src="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
         </div>
         <div class="inputBarHeader">
             <input type="text" placeholder="Search...">
@@ -44,279 +43,165 @@
     <hr>
 
 <nav class="categories">
-    <a href="accessories.html">ACCESSORIES</a>
-    <a href="bakingtools.html">BAKING TOOLS</a>
-    <a href="storage.html">STORAGE</a>
-    <a href="glasswares.html">GLASSWARES</a>
-    <a href="kitchenappliances.html">KITCHEN APPLIANCES</a>
-    <a href="knives.html">KNIVES</a>
-    <a href="cookwares.html">COOKWARES</a>
-    <a href="utensils.html">UTENSILS</a>
+    <a href="/HTML-CATEGORIES/accessories.html">ACCESSORIES</a>
+    <a href="/HTML-CATEGORIES/bakingtools.html">BAKING TOOLS</a>
+    <a href="/HTML-CATEGORIES/storage.html">STORAGE</a>
+    <a href="/HTML-CATEGORIES/glasswares.html">GLASSWARES</a>
+    <a href="/HTML-CATEGORIES/kitchenappliances.html">KITCHEN APPLIANCES</a>
+    <a href="/HTML-CATEGORIES/knives.html">KNIVES</a>
+    <a href="/HTML-CATEGORIES/cookwares.html">COOKWARES</a>
+    <a href="/HTML-CATEGORIES/utensils.html">UTENSILS</a>
 </nav>
 <hr>
 
-
-<div class="banners">
-    <img src="../images/BANNERS/Banner-Knife.jpg" alt="Knife Banner">
-    <p class="bannerMessageMain">Searing & Simmering</p>
-    <p class="bannerMessageSub">Elevate your stovetop with minimalist design and industrial-strength performance.</p>
+<div>
+    <ul>
+        <li><a href="/main.html">HOME</a></li>
+        <li><a href="/HTML-CATEGORIES/glasswares.html">GLASSWARES</a></li>
+        <li><a href="glasswares-Mugs-P2-viewmore.html">MUGS</a></li>
+    </ul>
 </div>
 
-<h2 class="h2Main">Frying Pan</h2>
+<h2 class="h2Main">Mugs</h2>
 <div class="mainProductsGroup">
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-1-Fry Pan-Classic Steel Wok with Bamboo Grip.png" alt="Classic Steel Wok with Bamboo Grip">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-1-3 Sets Teddy Bear Ceramic Mug.png" alt="Set of 3 Teddy Bear Ceramic Mug">
         </figure>
-        <figcaption class="productCaption">Classic Steel Wok with Bamboo Grip</figcaption>
-        <p class="price">₱1,299.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-2-Fry Pan-Classic Carbon Steel Wok.png" alt="Classic Carbon Steel Wok with Wooden Handle">
-        </figure>
-        <figcaption class="productCaption">Classic Carbon Steel Wok with Wooden Handle</figcaption>
-        <p class="price">₱775.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-3-Fry Pan-Shiny Frying Pan.png" alt="Modern Style Shiny Frying Pan">
-        </figure>
-        <figcaption class="productCaption">Modern Style Shiny Frying Pan</figcaption>
-        <p class="price">₱468.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-4-Fry Pan-Cast Iron Skillet.png" alt="Classic Style Cast Iron Skillet">
-        </figure>
-        <figcaption class="productCaption">Classic Style Cast Iron Skillet</figcaption>
-        <p class="price">₱495.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-5-Fry Pan-11inches Fry Pan.png" alt="11inches Elegant Frying Pan">
-        </figure>
-        <figcaption class="productCaption">11inches Elegant Frying Pan</figcaption>
-        <p class="price">₱480.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-6-Fry Pan-11inches Carbon Steel Frying Pan.png" alt="11inches Carbon Steel Frying Pan">
-        </figure>
-        <figcaption class="productCaption">11inches Carbon Steel Frying Pan</figcaption>
-        <p class="price">₱425.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-7-Fry Pan-8inches Black Frying Pan with Wooden Handle.png" alt="8inches Black Frying Pan with Wooden Handle">
-        </figure>
-        <figcaption class="productCaption">8inches Black Frying Pan with Wooden Handle</figcaption>
-        <p class="price">₱405.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/FRYING/Cookware-8-Fry Pan-8inches Cast Iron Skillet.png" alt="8inches Round Cast Iron Skillet">
-        </figure>
-        <figcaption class="productCaption">8inches Round Cast Iron Skillet</figcaption>
-        <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-</div>
-
-<div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-frying-P2-viewmore.html">View More</a></button>
-</div>
-
-
-<h2 class="h2Main">Grill Pan</h2>
-<div class="mainProductsGroup">
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-1-Orange Grill Pan.png" alt="Orange Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Orange Grill Pan</figcaption>
-        <p class="price">₱597.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-2-Blue Enamel Grill Pan.png" alt="Blue Enamel Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Blue Enamel Grill Pan</figcaption>
+        <figcaption class="productCaption">Set of 3 Teddy Bear Ceramic Mug</figcaption>
         <p class="price">₱599.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-3-Non Stick Grill Pan.png" alt="Non Stick Grill Pan">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-2-3 Sets Kitten Print Ceramic Mug.png" alt="Set of 3 Kitten Print Ceramic Mug">
         </figure>
-        <figcaption class="productCaption">Non Stick Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-4-Deep Square Grill Pan.png" alt="Deep Square Grill Pan">
-        </figure>
-        <figcaption class="productCaption">Deep Square Grill Pan</figcaption>
-        <p class="price">₱559.00</p>
+        <figcaption class="productCaption">Set of 3 Kitten Print Ceramic Mug</figcaption>
+        <p class="price">₱589.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-5-Mini Panini Pan with Press.png" alt="Mini Panini Pan with Press">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-3-3 Sets Puppy Print Ceramic Mug.png" alt="Set of 3 Puppy Print Ceramic Mug">
         </figure>
-        <figcaption class="productCaption">Mini Panini Pan with Press</figcaption>
-        <p class="price">₱630.00</p>
+        <figcaption class="productCaption">Set of 3 Puppy Print Ceramic Mug</figcaption>
+        <p class="price">₱599.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-6-11inches Square Griddle Pan.png" alt="11inches Square Griddle Pan">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-4-3 Sets Yellow Birds Ceramic Mug.png" alt="Set of 3 Yellow Birds Ceramic Mug">
         </figure>
-        <figcaption class="productCaption">11in. Square Griddle Pan</figcaption>
-        <p class="price">₱489.00</p>
+        <figcaption class="productCaption">Set of 3 Yellow Birds Ceramic Mug</figcaption>
+        <p class="price">₱569.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-7-11inches BBQ Pattern Square Grill Pan.png" alt="11inches BBQ Pattern Square Grill Pan">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-5-Botanical Mug with Blueberries and Bees.png" alt="Botanical Mug with Blueberries and Bees">
         </figure>
-        <figcaption class="productCaption">11in. BBQ Grill Pan</figcaption>
-        <p class="price">₱540.00</p>
+        <figcaption class="productCaption">Botanical Mug with Blueberries and Bees</figcaption>
+        <p class="price">₱119.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
         <figure>
-            <img src="../images/CATEGORIES/COOKWARES/GRILL/Cookware-Grill Pan-8-12inches Square Grill Pan.png" alt="12inches Square Grill Pan">
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-6-Kitten Print Ceramic Mug.png" alt="Kitten Print White Ceramic Mug">
         </figure>
-        <figcaption class="productCaption">12inches Square Grill Pan</figcaption>
-        <p class="price">₱499.00</p>
+        <figcaption class="productCaption">Kitten Print White Ceramic Mug</figcaption>
+        <p class="price">₱129.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-7-Elegant Blue Shade Ceramic Mug.png" alt="Elegant Blue Shade Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Elegant Blue Shade Ceramic Mug</figcaption>
+        <p class="price">₱105.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-8-Pastel Rainbow Ceramic Mug.png" alt="Pastel Rainbow Design Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Pastel Rainbow Design Ceramic Mug</figcaption>
+        <p class="price">₱90.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-9-Elegant Blue Wave Ceramic Mug.png" alt="Elegant Blue Wave Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Elegant Blue Wave Ceramic Mug</figcaption>
+        <p class="price">₱98.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-10-Red Hearts Ceramic Mug.png" alt="Lovely Red Hearts Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Lovely Red Hearts Ceramic Mug</figcaption>
+        <p class="price">₱95.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-11-Forest Green Leafy Ceramic Mug.png" alt="Forest Green Leafy Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Forest Green Leafy Ceramic Mug</figcaption>
+        <p class="price">₱84.00</p>
+        <button id="addToCart">Add to Cart</button>
+    </div>
+
+    <div class="eachProduct">
+        <figure>
+            <img src="../images/CATEGORIES/GLASSWARES/MUGS/Glasswares-Mugs-MORE-12-Brown Floral Ceramic Mug.png" alt="Brown Floral Theme Ceramic Mug">
+        </figure>
+        <figcaption class="productCaption">Brown Floral Theme Ceramic Mug</figcaption>
+        <p class="price">₱89.00</p>
         <button id="addToCart">Add to Cart</button>
     </div>
 </div>
 
 <div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-grill-P2-viewmore.html">View More</a></button>
+    <button id="viewMoreButton"><a href="/HTML-CATEGORIES/glasswares.html">◀</a></button>
+    <button id="viewMoreButton"><a href="/HTML-CATEGORIES/glasswares.html">1</a></button>
+    <button id="viewMoreButton"><a href="glasswares-Mugs-P2-viewmore.html">2</a></button>
 </div>
 
-<h2 class="h2Main">Pots</h2>
-<div class="mainProductsGroup">
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-1-6.25Qt. Stainless Steel Deep Round Stockpot with Lid.png" alt="6.25Qt. Stainless Steel Deep Round Stockpot with Lid">
-        </figure>
-        <figcaption class="productCaption">6.25Qt. Stainless Steel Round Stockpot with Lid</figcaption>
-        <p class="price">₱890.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-2-12cup Modern Stainless Steel Saucepan.png" alt="12cup Modern Stainless Steel Saucepan">
-        </figure>
-        <figcaption class="productCaption">12cup Modern Stainless Steel Saucepan</figcaption>
-        <p class="price">₱785.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-3-0.7Qt. Mini Stockpot with Glass Lid.png" alt="0.7Qt. Mini Stockpot with Glass Lid">
-        </figure>
-        <figcaption class="productCaption">0.7Qt. Mini Stockpot with Glass Lid</figcaption>
-        <p class="price">₱930.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-4-8Qt. Stainless Steel 3-Ply Base Stockpt with Lid.png" alt="8Qt. Stainless Steel 3-Ply Base Stockpt with Lid">
-        </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel 3-Ply Base Stockpt with Lid</figcaption>
-        <p class="price">₱799.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-5-8.3Qt. Thermalloy Stainless Steel Deep Stockpot.png" alt="8.3Qt. Thermalloy Stainless Steel Deep Stockpot">
-        </figure>
-        <figcaption class="productCaption">8.3Qt. Stainless Steel Deep Stockpot</figcaption>
-        <p class="price">₱710.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-6-8Qt. Stainless Steel Stockpot.png" alt="8Qt. Stainless Steel Stockpot">
-        </figure>
-        <figcaption class="productCaption">8Qt. Stainless Steel Stockpot</figcaption>
-        <p class="price">₱649.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-7-7.5Qt. Deep Round Stockpot & Colander Insert.png" alt="7.5Qt. Deep Round Stockpot & Colander Insert">
-        </figure>
-        <figcaption class="productCaption">7.5Qt. Deep Round Stockpot & Colander Insert</figcaption>
-        <p class="price">₱1,245.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
-
-    <div class="eachProduct">
-        <figure>
-            <img src="../images/CATEGORIES/COOKWARES/POTS/Cookware-Pots-8-7Qt Stainless Steel Stockpot with Lid.png" alt="7Qt Stainless Steel Stockpot with Lid">
-        </figure>
-        <figcaption class="productCaption">7Qt Stainless Steel Stockpot with Lid</figcaption>
-        <p class="price">₱846.00</p>
-        <button id="addToCart">Add to Cart</button>
-    </div>
+<div>
+    <ul>
+        <li><a href="/main.html">Featured Products</a></li>
+        <li><a href="/main.html">Best Sellers</a></li>
+        <li><a href="/main.html">Limited Offers</a></li>
+        <li><a href="/main.html">Bundle Deals</a></li>
+    </ul>
 </div>
-
-<div class="viewMore">
-    <button id="viewMoreButton"><a href="/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html">View More</a></button>
-</div>
-
-
 
 
 <h2 class="h2Main">Shop by Category</h2>
 <div class="bottomCategoryBlock">
-    <a href="accessories.html">ACCESSORIES</a>
-    <a href="bakingtools.html">BAKING TOOLS</a>
-    <a href="cookwares.html">COOKWARES</a>
-    <a href="glasswares.html">GLASSWARES</a>
-    <a href="kitchenappliances.html">KITCHEN APPLIANCES</a>
-    <a href="knives.html">KNIVES</a>
-    <a href="storage.html">STORAGE</a>
-    <a href="utensils.html">UTENSILS</a>
+    <a href="/HTML-CATEGORIES/accessories.html">ACCESSORIES</a>
+    <a href="/HTML-CATEGORIES/bakingtools.html">BAKING TOOLS</a>
+    <a href="/HTML-CATEGORIES/cookwares.html">COOKWARES</a>
+    <a href="/HTML-CATEGORIES/glasswares.html">GLASSWARES</a>
+    <a href="/HTML-CATEGORIES/kitchenappliances.html">KITCHEN APPLIANCES</a>
+    <a href="/HTML-CATEGORIES/knives.html">KNIVES</a>
+    <a href="/HTML-CATEGORIES/storage.html">STORAGE</a>
+    <a href="/HTML-CATEGORIES/utensils.html">UTENSILS</a>
 </div>
+
+
 
 
 
